Improve unit-tests